fix Jenkinsfile: remove if condition, add boolean param replace unsupported git branch --show-current, tested in jenkins with Single Pipeline, added scm (bit not yet any release for this helper repo

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 
   </modules>
   
+    <scm>
+        <connection>scm:git:https://gitbox.apache.org/repos/asf/turbine-fulcrum-build.git</connection>
+        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/turbine-fulcrum-build.git</developerConnection>    
+        <url>https://github.com/apache/turbine-fulcrum-build/tree/${project.scm.tag}</url>
+        <tag>master</tag>
+    </scm>
+  
   <build>
      <pluginManagement>
         <plugins>
