--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>turbine-parent</artifactId>
        <groupId>org.apache.turbine</groupId>
-       <version>12-SNAPSHOT</version>
+       <version>12</version>
   </parent>
   <artifactId>fulcrum</artifactId>
   <packaging>pom</packaging>
